# Auramaur

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  REVIEW_CHANGES_REQUESTED.md  compose.yaml  pyproject.toml
auramaur/: __init__.py  auramaur.db.bak-pre-v9  bot.py  bot_arb.py  bot_arb_execute.py  bot_arb_scan.py  bot_exits.py  bot_order_monitor.py  bot_strategy_tasks.py  cli.py  components.py  composition.py  data_quality.py  health.py  information_graduation.py  killswitch.py  lineage_observer.py  runtime.py  subprocess_security.py
config/: defaults.yaml  settings.py
deploy/: backup.sh  check-env.py  env.manifest.yaml  init-runtime.sh  kill-switch.sh  monitor.sh  offsite-backup.sh  offsite-bundle.sh  restore-bundle.sh  restore.sh  start.sh  verify.sh
docs/: IBKR_PIPELINE.md  INTERIM_MANAGER.md  KALSHI_HARDENING.md  KRAKEN_RESEARCH_PLAN.md  MIGRATION_HOST.md  POLYMARKET_RESEARCH.md  PORTABLE_DEPLOYMENT.md  SECRETS.md  ibkr-research-signals.md  ibkr_multiasset_paper.md  information_graduation.md  kraken_treasury.md
logs/: run_live_20260624_175219.out  run_live_20260624_190845.out
scripts/: detect_proxy_type.py  dev-web-wsl.sh  evidence_audit.py  kraken_balance.py  kraken_directional_backtest.py  kraken_transfer.py  migrate_host.sh  migrate_portable.sh  preflight_venues.py  probe_proxy.py  restart_live.sh  unstick_kraken_spec.py  verify_safe_owner.py
tests/: conftest.py  test_agent_analyzer_isolation.py  test_agent_trader.py  test_agentmcp_book.py  test_agentmcp_compare.py  test_agentmcp_get_portfolio.py  test_agentmcp_market_data.py  test_agentmcp_readonly.py  test_aggregator.py  test_alpaca_multiasset_bridge.py  test_arb_hardening.py  test_arbitrage.py  test_attribution.py  test_attribution_strategy.py  test_attribution_strategy_entry.py  test_balance_failopen_mm_reserve.py  test_balance_recorder.py  test_bias_harvest.py  test_books.py  test_build_info.py  test_calibration.py  test_call_budget.py  test_candidate_dispositions.py  test_category_lineage.py  test_classifier.py  test_claude_retry.py  test_cli_dust_exit.py  test_clob_call.py  test_cockpit_unified.py  test_coinbase_paper.py  test_confidence_normalization.py  test_config_local_override.py  test_cross_arb.py  (+144 more)
(+242 files in other folders)
