[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["auramaur*", "config*"]

[project]
name = "auramaur"
version = "0.1.0"
description = "Polymarket prediction market trading bot powered by Claude NLP"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client-v2>=1.0.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.9",
    "aiosqlite<=0.17.0",
    "asyncpraw>=7.7",
    "tweepy>=4.14",
    "fredapi>=0.5",
    "newsapi-python>=0.2.7",
    "ddgs>=7.0",
    "feedparser>=6.0",
    "rich>=13.0",
    "structlog>=24.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "yfinance>=1.2.0",
    "web3>=7.0",
]

[project.optional-dependencies]
kalshi = ["kalshi-python>=2.1.0"]
ibkr = ["ib_async>=1.0.0"]
# Semantic evidence ranking. Optional: without it, relevance scoring falls back
# to scikit-learn TF-IDF and then a no-dependency heuristic.
embeddings = ["sentence-transformers>=3.0"]
# Hermes agent-trader bridge: exposes Auramaur's read/paper plumbing as an MCP
# server (auramaur.agentmcp.server) that the Hermes agent consumes over stdio.
# Kept out of the live bot's runtime deps on purpose — the bot never imports it.
agent = ["fastmcp>=2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
auramaur = "auramaur.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# The orchestrators use intentional late/in-function module imports to break
# import cycles; E402 (import-not-at-top) there is by design, not a defect.
"auramaur/bot.py" = ["E402"]
"auramaur/strategy/engine.py" = ["E402"]
"auramaur/cli/_base.py" = ["E402"]
"auramaur/cli/__init__.py" = ["E402"]
# Tests and research scripts: inline semicolons (E702), local setup imports
# (E402), and throwaway locals (F841) are idiomatic here and not worth churn.
"tests/**" = ["E402", "E702", "F841"]
"scripts/**" = ["E402", "E702", "F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
